--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 .location,
 .temperature {
-    height: 300vh;
+    height: 40%;
     width: 50%;
     display: flex;
     justify-content: space-around;
